--- a/action_groups.html
+++ b/action_groups.html
@@ -231,120 +231,70 @@
           Action Groups of the DBCP shall submit annual reports of their activities to the Chairperson of the DBCP.
         </p>
 
-    <div class="content" style="padding-top: 30px">
-        <div class="twoparts-left">
-          <figure>
-            <a href="https://www.eumetnet.eu/observations/surface-marine-observations/" target="_blank">
-              <img src="figures/Esurfmar.jpg" alt="Esurfmar" />
-            </a>
-            <figcaption>
+    <ul class="custom-bullets">
+      <li style="text-align: left">
+        <p style="text-align: left">
               <b>European EUCOS Surface Marine Programme (ESURFMAR)</b>, adopted by the DBCP in 1987 as EGOS, coordinate, optimize, and progressively integrate European activities for surface observations over the sea in support of Numerical Weather Prediction and climate. It maintain an operational network of drifting buoys measuring air pressure and sea surface temperature in the North Atlantic, Tropical Atlantic, and Arctic, with data made available in real time onto the Global Telecommunication System of WMO. 
               <a href="https://www.eumetnet.eu/observations/surface-marine-observations/" target="_blank">
                 Learn more...
               </a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="twoparts-right">
-          <figure>
-            <img src="figures/IABP.jpg" alt="IABP" />
-            <figcaption>
+        </p>
+      </li>
+      <li style="text-align: left">
+        <p style="text-align: left">
               <b>International Arctic Buoy Programme (IABP)</b>, adopted by the DBCP in 1991, work together to maintain a network of drifting buoys in the Arctic Ocean to provide meteorological and oceanographic data for real-time operational requirements and research purposes including support to the World Climate Research Programme (WCRP) and the World Weather Watch (WWW) Programme.
               <a href="https://iabp.apl.washington.edu/" target="_blank">
                 Learn more...
               </a>
-            </figcaption>
-          </figure>
-        </div>
-    </div>
-
-    <p></p>
-
-    <div class="content" style="padding-top: 30px">
-        <div class="twoparts-left">
-          <figure>
-            <img src="figures/ISABP.jpg" alt="ISABP" />
-            <figcaption>
+        </p>
+      </li>
+      <li style="text-align: left">
+        <p style="text-align: left">
               Established in 1994, the <b>International South Atlantic Buoy Programme (ISABP)</b> operates as a regional action group focusing on the South Atlantic Ocean. The ISABP’s buoys collect oceanographic and meteorological data to support both regional and global initiatives, including GOOS and GCOS.
               <a href="http://oceatlan.org/isabp/" target="_blank">
                 Learn more...
               </a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="twoparts-right">
-          <figure>
-            <img src="figures/NPDBAP.jpg" alt="NPDBAP" />
-            <figcaption>
+        </p>
+      </li>
+      <li style="text-align: left">
+        <p style="text-align: left">
               Adopted in 2002, the <b>North Pacific Data Buoy Advisory Panel (NPDBAP)</b> focuses on maintaining a buoy network in the North Pacific Ocean north of 30°N. This program supports regional observation efforts, contributing to global data-sharing initiatives and providing critical information for meteorological and oceanographic applications.
               <a href="https://www.ocean-ops.org/dbcp/npdbap/index.html" target="_blank">
                 Learn more...
               </a>
-            </figcaption>
-          </figure>
-        </div>
-    </div>
-
-    <p></p>
-
-    <div class="content" style="padding-top: 30px">
-        <div class="twoparts-left">
-          <figure>
-            <img src="figures/IBPIO.jpg" alt="IBPIO" />
-            <figcaption>
+        </p>
+      </li>
+      <li style="text-align: left">
+        <p style="text-align: left">
             Launched in 1996, the <b>International Buoy Program for the Indian Ocean (IBPIO)</b> is an essential component of the Indian Ocean Observation Network. Under the program, the National Institute of Ocean Technology (NIOT) operates and maintains a network of moored buoys, including advanced Ocean Moored buoy Network for Northern Indian (OMNI) buoys.
             IBPIO supports diverse research objectives, including the study of monsoon systems and their influence on regional climates. Its buoys also contribute to operational weather forecasting, showcasing the value of regional Action Groups in addressing local challenges while contributing to global efforts.
               <a href="https://incois.gov.in/portal/datainfo/buoys.jsp" target="_blank">
                 Learn more...
               </a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="twoparts-right">
-          <figure>
-            <img src="figures/IPAB.jpg" alt="IPAB" />
-            <figcaption>
+        </p>
+      </li>
+      <li style="text-align: left">
+        <p style="text-align: left">
             The <b>International Programme for Antarctic Buoys (IPAB)</b> adopted in 1994, works to maintain a buoy network in the Southern Ocean, particularly over sea ice. This program supports research on Antarctic climate, weather forecasting, and satellite measurement validation.
             By providing crucial data on ice dynamics and ocean-atmosphere interactions, IPAB enhances the understanding of the Southern Ocean’s role in global climate systems.
               <a href="https://www.ipab.aq/" target="_blank">
                 Learn more...
               </a>
-            </figcaption>
-          </figure>
-        </div>
-    </div>
+        </p>
+      </li>
+    </ul>
 
-
-  </div>
-</section>
-
-
-
-<!-- Article Section with one coloumn only -->
-
-<section class="article-section">
-  <div class="container">
-
-    <div class="content">
-    <h2>Other Groups</h2>
-    </div>
-
-    <div class="content">
-        <div class="twoparts-left" >
-          <p style="text-align: left">
+        <h3><i>Other Groups</i></h3>
+        <p style="text-align: left">
             The <b>Southern Ocean Buoy Program (SOBP)</b> focuses on deploying barometer buoys in the Southern Ocean, maintaining an array of approximately 300 drifting buoys south of 50°S. This initiative enhances the observation network in a region critical for understanding global climate processes.
-          </p>
-        </div>
-        <div class="twoparts-right">
-          <figure>
-            <a href="#" target="_blank"><img src="figures/SOBP.jpg" alt="SOBP" /></a>
-            <!--figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit </figcaption -->
-          </figure>
-        </div>
-    </div>
+              <a href="#" target="_blank">
+                Learn more...
+              </a>
+        </p>
 
   </div>
 </section>
+
 
 
 <!-- Related article section -->
