--- a/gallery.html
+++ b/gallery.html
@@ -168,6 +168,14 @@
           <img src="figures/gallery/003.jpg" alt="Buoy Deployment">
           <div class="gallery-caption">Buoy deployment during a research mission</div>
         </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="gallery">
+    <div class="container">
+      <p>Explore images of data buoys, ocean observations, and DBCP activities.</p>
+      <div class="gallery-grid">
         <div class="gallery-item">
           <img src="figures/gallery/004.jpg" alt="Ocean Observation">
           <div class="gallery-caption">Buoy capturing oceanographic data</div>
