--- a/barometer_upgrade.html
+++ b/barometer_upgrade.html
@@ -90,7 +90,7 @@
       </div>
       <div class="hero-column-mid">
         <div class="hero-content">
-          <h1>Observing Valuable Atmospheric Data for Better Global Forecast</h1>
+          <h1>Observing valuable atmospheric data for better global forecast</h1>
         </div>
         <div class="hero-logos">
           <a href="https://www.wmo.int" target="_blank">
