--- a/data_access.html
+++ b/data_access.html
@@ -96,7 +96,7 @@
       </div>
       <div class="hero-column-mid">
         <div class="hero-content">
-          <h1>Connecting You to the Ocean: Fast, Reliable, and Open Access to Buoy Data</h1>
+          <h1>Connecting you to the ocean: fast, reliable, and open access to buoy data</h1>
         </div>
         <div class="hero-logos">
           <a href="https://www.wmo.int" target="_blank">
