--- a/data_uses.html
+++ b/data_uses.html
@@ -90,7 +90,7 @@
       </div>
       <div class="hero-column-mid">
         <div class="hero-content">
-          <h1>Drifting with Purpose, Anchored in Science – Advancing Climate, Safety, and Sustainability</h1>
+          <h1>Drifting with purpose, anchored in science – advancing climate, safety, and sustainability</h1>
         </div>
         <div class="hero-logos">
           <a href="https://www.wmo.int" target="_blank">
