--- a/network_status_and_map.html
+++ b/network_status_and_map.html
@@ -98,7 +98,7 @@
       </div>
       <div class="hero-column-mid">
         <div class="hero-content">
-          <h1>Mapping the Seas in Real Time: The Global Buoy Network at Work</h1>
+          <h1>Mapping the seas in real time: the global buoy network at work</h1>
         </div>
         <div class="hero-logos">
           <a href="https://www.wmo.int" target="_blank">
