--- a/qc.html
+++ b/qc.html
@@ -98,8 +98,7 @@
       </div>
       <div class="hero-column-mid">
         <div class="hero-content">
-          <h1>Quality Matters: Improving Buoy Data
-          for a Better Ocean Observation</h1>
+          <h1>Quality matters: improving buoy data for a better ocean observation</h1>
         </div>
         <div class="hero-logos">
           <a href="https://www.wmo.int" target="_blank">
