--- a/standard.html
+++ b/standard.html
@@ -90,7 +90,7 @@
       </div>
       <div class="hero-column-mid">
         <div class="hero-content">
-          <h1>DBCP Develops, Updates, and Adheres to Internationally Recognized Standards and Best Practices</h1>
+          <h1>DBCP develops, updates, and adheres to internationally recognized standards and best practices</h1>
         </div>
         <div class="hero-logos">
           <a href="https://www.wmo.int" target="_blank">
