--- a/anti_vandalism.html
+++ b/anti_vandalism.html
@@ -90,7 +90,7 @@
       </div>
       <div class="hero-column-mid">
         <div class="hero-content">
-          <h1>Buoys are Keeping Us Save, Let's do Our Part in Keeping Them Save</h1>
+          <h1>Buoys are keeping us save, let's do our part in keeping them save</h1>
         </div>
         <div class="hero-logos">
           <a href="https://www.wmo.int" target="_blank">
