--- a/deployment.html
+++ b/deployment.html
@@ -90,7 +90,7 @@
       </div>
       <div class="hero-column-mid">
         <div class="hero-content">
-    <h1>Keep the Network Alive, One Deployment at a Time</h1>
+    <h1>Keep the network alive, one deployment at a time</h1>
         </div>
         <div class="hero-logos">
           <a href="https://www.wmo.int" target="_blank">
