--- a/e_stewardship.html
+++ b/e_stewardship.html
@@ -90,7 +90,7 @@
       </div>
       <div class="hero-column-mid">
         <div class="hero-content">
-          <h1>Observing the Oceans Responsibly – Advancing Science through Sustainable Stewardship</h1>
+          <h1>Observing the oceans responsibly – advancing science through sustainable stewardship</h1>
         </div>
         <div class="hero-logos">
           <a href="https://www.wmo.int" target="_blank">
