--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       </div>
       <div class="hero-column-mid">
         <div class="hero-content">
-          <h1>Supporting Climate Resilience and Sustainable Ocean Governance</h1>
+          <h1>Supporting climate resilience and sustainable ocean governance</h1>
         </div>
         <div class="hero-logos">
           <a href="https://www.wmo.int" target="_blank">
