--- a/newsletter.html
+++ b/newsletter.html
@@ -90,7 +90,7 @@
       </div>
       <div class="hero-column-mid">
         <div class="hero-content">
-          <h1>Strengthening Ocean Monitoring for a Resilient and Sustainable Future</h1>
+          <h1>Strengthening ocean monitoring for a resilient and sustainable future</h1>
         </div>
         <div class="hero-logos">
           <a href="https://www.wmo.int" target="_blank">
