--- a/platform.html
+++ b/platform.html
@@ -90,7 +90,7 @@
       </div>
       <div class="hero-column-mid">
         <div class="hero-content">
-          <h1>Ocean Buoys: the Floating Observatories Powering Ocean and Climate Science</h1>
+          <h1>Ocean buoys: the floating observatories powering ocean and climate science</h1>
         </div>
         <div class="hero-logos">
           <a href="https://www.wmo.int" target="_blank">
