--- a/publications.html
+++ b/publications.html
@@ -90,7 +90,7 @@
       </div>
       <div class="hero-column-mid">
         <div class="hero-content">
-          <h1>DBCP: Supporting Research, Advancing Ocean Observations</h1>
+          <h1>DBCP: supporting research, advancing ocean observations</h1>
         </div>
         <div class="hero-logos">
           <a href="https://www.wmo.int" target="_blank">
