--- a/share_data.html
+++ b/share_data.html
@@ -97,7 +97,7 @@
       </div>
       <div class="hero-column-mid">
         <div class="hero-content">
-          <h1>Delivering Ocean Insights, Preserving Data for the Future</h1>
+          <h1>Delivering ocean insights, preserving data for the future</h1>
         </div>
         <div class="hero-logos">
           <a href="https://www.wmo.int" target="_blank">
