--- a/platform.html
+++ b/platform.html
@@ -135,31 +135,25 @@
 </section>
 
 
-<!-- Article Section with two colomn: right text, left image with caption -->
-
 <section class="article-section">
   <div class="container">
-    <div class="content" >
-      <!-- Left Column: Image -->
-      <div class="left-image">
-        <figure>
-          <img src="figures/Drifting_buoy.jpg" alt="Drifting buoy" />
-          <!--figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</figcaption-->
-        </figure>
-      </div>
-      <!-- Right Column: Text -->
-      <div class="right-text">
-        <h2 style="text-align: left">Drifting buoys</h2>
+    <div class="content content-float">
+      <h2 style="text-align: left">Drifting buoys</h2>
+      <figure class="floating-image">
+        <img src="figures/Drifting_buoy.jpg" alt="Drifting buoy">
+      </figure>
+      <div class="text-content">
         <p style="text-align: left">
-          Drifting buoys are generally attached to some form of drogue or sea-anchor, are easy to deploy,are relatively inexpensive to operate and reliably measure the atmosphere and ocean surface conditions, for an average of 18 months.
-          Drifting buoys have a long history of use in oceanography, principally for the measurement of currents. There have also been many types of drifting buoys used for meteorological purposes since the First GARP Global Experiment (FGGE) in the 1970s.
+          Drifting buoys are generally attached to some form of drogue or sea-anchor, are easy to deploy, are relatively inexpensive to operate and reliably measure the atmosphere and ocean surface conditions, for an average of 18 months. Drifting buoys have a long history of use in oceanography, principally for the measurement of currents. There have also been many types of drifting buoys used for meteorological purposes since the First GARP Global Experiment (FGGE) in the 1970s.
+        </p>
+        <p style="text-align: left">
           The DBCP has been working for decades to design standardised drifting buoys to suit observational requirements for meteorological and oceanographic applications. Buoys that track surface currents in this way are called Lagrangian drifters and track ocean currents at the depth corresponding to the length of their drogue whilst collecting surface and subsurface measurements.
         </p>
-        <h3 style="text-align: left">History</h3>
         <p style="text-align: left">
-Lagrangian drifters were first designed and deployed in the world oceans in the context of the Surface Velocity Program (SVP) of the World Ocean Circulation Experiment (WOCE) » and the Tropical Ocean and Global Atmosphere Program (TOGA) , which became the Global Drifter Program (GDP).
-These SVP drifters were standardized in 1991, with small spherical hull and floats, and large Holey-Sock drogue centred at 15 meters below the surface. In 1993, drifters with barometer ports, called SVPB drifters were tested in the high seas and proven reliable. The Lagrangian Barometer Drifter, designed by the GDP, is now commercially available at low cost, and meets both oceanographic requirements (research: measurements of sea surface currents and sea temperature) and meteorological requirements (operational: sea surface temperature and air pressure).
-The DBCP has now mostly standardised on the use of SVP and SVP buoys, and their variants for the high seas.
+          Lagrangian drifters were first designed and deployed in the world oceans in the context of the Surface Velocity Program (SVP) of the World Ocean Circulation Experiment (WOCE) and the Tropical Ocean and Global Atmosphere Program (TOGA), which became the Global Drifter Program (GDP). These SVP drifters were standardized in 1991, with small spherical hull and floats, and large Holey-Sock drogue centred at 15 meters below the surface. In 1993, drifters with barometer ports, called SVPB drifters, were tested in the high seas and proven reliable.
+        </p>
+        <p style="text-align: left">
+          The Lagrangian Barometer Drifter, designed by the GDP, is now commercially available at low cost, and meets both oceanographic requirements (research: measurements of sea surface currents and sea temperature) and meteorological requirements (operational: sea surface temperature and air pressure). The DBCP has now mostly standardised on the use of SVP and SVP buoys, and their variants for the high seas.
         </p>
         <p style="text-align: right">
           <a href="barometer_upgrade.html" target="_blank">
@@ -173,23 +167,17 @@ The DBCP has now mostly standardised on the use of SVP and SVP buoys, and their 
   </div>
 </section>
 
-
-
-<!-- Article Section with two colomn: right text, left image with caption -->
-
 <section class="article-section">
   <div class="container">
-    <div class="content" >
-      <!-- Left Column: Image -->
-      <div class="left-image">
-        <figure>
-          <img src="figures/ice_buoy.jpg" alt="Ice buoy" />
-          <!--figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</figcaption-->
-        </figure>
-      </div>
-      <!-- Right Column: Text -->
-      <div class="right-text">
-        <h2 style="text-align: left">Ice buoys</h2>
+    <div class="content content-float">
+      <h2 style="text-align: left">Ice buoys</h2>
+      <figure class="floating-image">
+        <img src="figures/ice_buoy.jpg" alt="Ice buoy">
+      </figure>
+      <div class="text-content">
+        <p style="text-align: left">
+          Drifting buoys are generally attached to some form of drogue or sea-anchor, are easy to deploy, are relatively inexpensive to operate and reliably measure the atmosphere and ocean surface conditions, for an average of 18 months. Drifting buoys have a long history of use in oceanography, principally for the measurement of currents. There have also been many types of drifting buoys used for meteorological purposes since the First GARP Global Experiment (FGGE) in the 1970s.
+        </p>
         <p style="text-align: left">
           Ice buoys have been used extensively in Arctic and Antarctic regions to track ice movement and are available commercially for deployment by ships or aircraft. Such buoys are equipped with low temperature electronics and lithium batteries that can operate at temperatures down to -50°C. In addition to the regularly-computed Argos locations the ice buoys can be equipped with satellite navigation receivers (e.g. GPS) which can compute even more accurate positions.
         </p>
@@ -205,23 +193,14 @@ The DBCP has now mostly standardised on the use of SVP and SVP buoys, and their 
   </div>
 </section>
 
-
-
-<!-- Article Section with two colomn: right text, left image with caption -->
-
 <section class="article-section">
   <div class="container">
-    <div class="content" >
-      <!-- Left Column: Image -->
-      <div class="left-image">
-        <figure>
-          <img src="figures/Moored_buoy.png" alt="Moored buoy" />
-          <!--figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</figcaption-->
-        </figure>
-      </div>
-      <!-- Right Column: Text -->
-      <div class="right-text">
-        <h2 style="text-align: left">Moored buoys</h2>
+    <div class="content content-float">
+      <h2 style="text-align: left">Moored buoys</h2>
+      <figure class="floating-image">
+        <img src="figures/Moored_buoy.png" alt="Moored buoy">
+      </figure>
+      <div class="text-content">
         <p style="text-align: left">
           Are anchored at fixed locations and regularly collect observations from many different atmospheric and oceanographic sensors. Moored buoys are usually deployed to serve national forecasting needs, maritime safety needs or to observe regional climate patterns.
         </p>
@@ -249,22 +228,14 @@ The DBCP has now mostly standardised on the use of SVP and SVP buoys, and their 
   </div>
 </section>
 
-
-<!-- Article Section with two colomn: right text, left image with caption -->
-
 <section class="article-section">
   <div class="container">
-    <div class="content" >
-      <!-- Left Column: Image -->
-      <div class="left-image">
-        <figure>
-          <img src="figures/Tropical_moored_buoy.png" alt="Tropical moored buoy" />
-          <!--figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</figcaption-->
-        </figure>
-      </div>
-      <!-- Right Column: Text -->
-      <div class="right-text">
-        <h2 style="text-align: left">Tropical moored buoy</h2>
+    <div class="content content-float">
+      <h2 style="text-align: left">Tropical moored buoy</h2>
+      <figure class="floating-image">
+        <img src="figures/Tropical_moored_buoy.png" alt="Tropical moored buoy">
+      </figure>
+      <div class="text-content">
         <p style="text-align: left">
           A major part of the DBCP's moored buoy network is the Tropical Moored Buoy Implementation Panel array, which has arrays of moorings in each ocean basin and are used to monitor large scale phenomenon such as El Niño and the Southern Oscillation, showing the importance in the annual variability of global climate.
         </p>
@@ -283,28 +254,19 @@ The DBCP has now mostly standardised on the use of SVP and SVP buoys, and their 
   </div>
 </section>
 
-
-
-<!-- Article Section with two colomn: right text, left image with caption -->
-
 <section class="article-section">
   <div class="container">
-    <div class="content" >
-      <!-- Left Column: Image -->
-      <div class="left-image">
-        <figure>
-          <img src="figures/Wave_buoy.png" alt="Wave buoy" />
-          <!--figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</figcaption-->
-        </figure>
-      </div>
-      <!-- Right Column: Text -->
-      <div class="right-text">
-        <h2 style="text-align: left">Wave buoy</h2>
+    <div class="content content-float">
+      <h2 style="text-align: left">Wave buoy</h2>
+      <figure class="floating-image">
+        <img src="figures/Wave_buoy.png" alt="Wave buoy">
+      </figure>
+      <div class="text-content">
         <p style="text-align: left">
           Many different sorts of Wave Buoys exist to capture and model information about ocean dynamics on the surface. These buoys measure the frequency and size of wave energy (known as the spectra) from which significant wave height, dominant wave period, and average wave period are derived. Even the direction of wave propagation is measured on many moored buoys. This information can be used to greatly improve the prediction and warnings for dangerous storms.
         </p>
         <p style="text-align: right">
-          <a href="#" target="_blank">
+          <a href="https://www.offshore-energy.biz/triaxys-wave-buoys-set-course-for-down-under/" target="_blank">
             <button class="button-orange">
               <i>Learn more</i>
             </button>
@@ -318,35 +280,11 @@ The DBCP has now mostly standardised on the use of SVP and SVP buoys, and their 
 
 
 
-<!-- Article Section with two colomn: right text, left image with caption -->
 
-<section class="article-section">
-  <div class="container">
-    <div class="content" >
-      <!-- Left Column: Image -->
-      <div class="left-image">
-        <figure>
-          <img src="figures/Oceansites.png" alt="OceanSITES reference time series stations" />
-          <!--figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</figcaption-->
-        </figure>
-      </div>
-      <!-- Right Column: Text -->
-      <div class="right-text">
-        <h2 style="text-align: left">OceanSITES reference time series stations</h2>
-        <p style="text-align: left">
-          These include multi-disciplinary platforms measuring air-sea interactions, and deep ocean conditions for many variables over an extended time period. These platforms are coordinated globally by the OceanSITES team.
-        </p>
-        <p style="text-align: right">
-          <a href="#" target="_blank">
-            <button class="button-ijo">
-              <i>Learn more</i>
-            </button>
-          </a>
-        </p>
-      </div>
-    </div>
-  </div>
-</section>
+
+
+
+
 
 
 <!-- Related article section -->
