--- a/index.html
+++ b/index.html
@@ -127,15 +127,15 @@
     <div class="stats-grid">
       <div class="stat-item">
         <h3>1,500+</h3>
-        <p>Active Bouys</p>
+        <p>active bouys</p>
       </div>
       <div class="stat-item">
         <h3>361 million km2</h3>
-        <p>Ocean Areas Covered</p>
+        <p>ocean areas covered</p>
       </div>
       <div class="stat-item">
         <h3>50+ Years</h3>
-        <p>Of Observing and Monitoring Service</p>
+        <p>of observing and monitoring service</p>
       </div>
     </div>
       <p style="margin-top: 20px;">The DBCP is an international program coordinating the use of autonomous data buoys to observe atmospheric and oceanographic conditions, over ocean areas where few other measurements are taken.</p>
