--- a/about.html
+++ b/about.html
@@ -344,6 +344,37 @@
   </div>
 </section>
 
+<!-- Secretariat Support -->
+<section class="statistics" >
+  <div class="container">
+    <h3>Ex-Officio Secretariat Support</h3>
+    <div class="stats-grid">
+      <div class="stat-item">
+        <p><b>WMO Secretariat Support</b></p>
+        <a href="mailto:cgallage@wmo.int" target="_blank">
+          <img src="figures/ChampikaGallage.jpg" alt="img" class="logo" style="border: 1px solid #ccc; border-radius: 5px; box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);">
+        </a>
+        <p><a href="mailto:mailto:cgallage@wmo.int" target="_blank">Ms. Champika Gallage</a></p>
+      </div>
+      <div class="stat-item">
+        <p><b>IOC Secretariat Support</b></p>
+        <a href="mailto:ji.li@unesco.org" target="_blank">
+          <img src="figures/JingLi.jpg" alt="img" class="logo" style="border: 1px solid #ccc; border-radius: 5px; box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);">
+        </a>
+        <p><a href="mailto:ji.li@unesco.org" target="_blank">Ms. Jing Li</a></p>
+      </div>
+      <div class="stat-item">
+        <p><b>Technical Coordinator</b></p>
+        <a href="mailto:mkramp@wmo.int" target="_blank">
+          <img src="figures/MartinKramp.jpg" alt="img" class="logo" style="border: 1px solid #ccc; border-radius: 5px; box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);">
+        </a>
+        <p><a href="mailto:mkramp@wmo.int" target="_blank">Mr. Martin Kramp</a></p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
       
 
 <!-- Article Section with two colomn: right text, left image with caption -->
