--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="figures/favicon.png">
-  <title>Publications ¦ Data Buoy Cooperation Panel</title>
+  <title>Gallery ¦ Data Buoy Cooperation Panel</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
